--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -65,47 +65,60 @@
 		<li><span> <a
 		href="review/html.aspx" target="mainframe">活动展示</a></span></li>
 		<li ><span> <a
-		href="review/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
-		<li ><span> <a
 		href="review/reviewlist.aspx" target="mainframe">好评列表</a></span></li>		
-		<li ><span> <a
-		href="review/msg.aspx" target="mainframe">短信提醒设置</a></span></li>		
-		<li ><span> <a
-		href="review/kefulist.aspx" target="mainframe">待审核评价</a></span></li>		
-		<li ><span> <a
-		href="review/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
-		<li ><span> <a
-		href="review/itemsend.aspx" target="mainframe">礼品赠送记录</a></span></li>		
-		<li ><span> <a
-		href="review/qubie.html" target="mainframe">版本区别</a></span></li>		
     </ul>
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 微博营销 </span>
+<h3 class="mytaobao-bar"><span> 评论审核 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a
-		href="microblog/weiboindex.aspx" target="mainframe">微博营销</a></span></li>
+		<li ><span> <a
+		href="review/kefulist.aspx" target="mainframe">待审核评价</a></span></li>		
     </ul>
 </div>
 
-<!--<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 帮助中心 </span>
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 短信提醒 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a
-		href="blog/qubie.html" target="mainframe">版本功能区分</a></span></li>
-				</ul>
-</div>-->
+		<li ><span> <a
+		href="review/msg.aspx" target="mainframe">短信提醒设置</a></span></li>	
+		<li ><span> <a
+		href="review/msglist.aspx" target="mainframe">短信发送记录</a></span></li>		
+		<li ><span> <a
+		href="review/msgbuy.aspx" target="mainframe">购买短信</a></span></li>	
+		<li ><span> <a
+		href="review/msgaddlist.aspx" target="mainframe">短信充值记录</a></span></li>	
+    </ul>
+</div>
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li ><span> <a
+		href="review/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
+		<li ><span> <a
+		href="review/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
+		<li ><span> <a
+		href="review/itemsend.aspx" target="mainframe">礼品赠送记录</a></span></li>		
+    </ul>
+</div>
+
+
 
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助教程 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+		<li ><span> <a
+		href="review/qubie.html" target="mainframe" style="color:Red; font-weight:bold">版本区别</a></span></li>		
 		<li><span> <a
 		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">查看详细帮助教程</a></span></li>
 </div>
