--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -63,17 +63,17 @@
 		<li><span> <a
 		href="review/setting.aspx" target="mainframe">基本设置</a></span></li>
 		<li><span> <a
-		href="review/html.aspx" target="mainframe">活动展示</a></span></li>
-		<li ><span> <a
-		href="review/reviewlist.aspx" target="mainframe">好评列表</a></span></li>		
+		href="review/html.aspx" target="mainframe">活动展示</a></span></li>	
     </ul>
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 评论审核 </span>
+<h3 class="mytaobao-bar"><span> 商品评价 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+		<li ><span> <a
+		href="review/reviewlist.aspx" target="mainframe">好评列表</a></span></li>	
 		<li ><span> <a
 		href="review/kefulist.aspx" target="mainframe">待审核评价</a></span></li>		
     </ul>
