--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -107,6 +107,8 @@
 		href="review/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
 		<li ><span> <a
 		href="review/itemsend.aspx" target="mainframe">礼品赠送记录</a></span></li>		
+		<li ><span> <a
+		href="review/msgsend.aspx" target="mainframe">手动赠送</a></span></li>		
     </ul>
 </div>
 
