--- a/top/review/qubie.html
+++ b/top/review/qubie.html
@@ -69,8 +69,8 @@
     <tr>
     <td height="20"><div align="right">升级入口</div></td>
     <td><div align="center">&nbsp;</div></td>
-    <td><div align="center"> <a href='http://pay.taobao.com/mysub/subarticle/upgrade_order_sub_article.htm?market_type=6&article_id=181' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
-    <td><div align="center"> <a href='http://pay.taobao.com/mysub/subarticle/upgrade_order_sub_article.htm?market_type=6&article_id=181' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
+    <td><div align="center"> <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22904-2:1;' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
+    <td><div align="center"> <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22904-3:1;' target="_blank"><b style="font-size:14px; color:Red; font-weight:bold">我要升级</b></a> </div></td>
   </tr>
 </table>
 <br>
