--- a/top/index.html
+++ b/top/index.html
@@ -93,7 +93,7 @@ weight:bold"><b>推荐送好礼</b></a></span></li>
 	</a></span></li>				<li><span> <a
 		href="market/result.aspx" target="mainframe">投放结果分析
 	</a></span></li>		<li><span> <a
-		href="http://seller.taobao.com/fuwu/service.htm?service_id=11807" 
+		href="http://seller.taobao.com/fuwu/service.htm?service_id=11807&fromleft=1" 
 target="_blank"><b style="color:red; font-weight:bold;">团购营销</b>
 	</a></span></li>		<li><span> <a
 		href="http://seller.taobao.com/fuwu/service.htm?service_id=4545&fromleft=1" 
@@ -123,23 +123,7 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-	<li ><span> <a
-		href="http://seller.taobao.com/fuwu/shopshow/shop_index.htm?
 
-page_id=184868&isv_id=204200856&page_rank=3&tab_type=2" target="_blank">服务介绍
-	</a></span></li>	
-	<li ><span> <a
-		href="http://seller.taobao.com/fuwu/shopshow/shop_index.htm?
-
-page_id=185339&isv_id=204200856&page_rank=4&tab_type=2" target="_blank">服务优势
-	</a></span></li>
-	
-		<li><span> <a
-		href="../help/index.html" target="mainframe">如何创建推广</a></span></li>
-		<li ><span> <a
-		href="../help/index.html" target="mainframe">查看推广效果
-	</a></span></li>		
-				
 		<li><span> <a
 		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" 
 
