--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -17,7 +17,7 @@
 	    <p class="login-info">
             <script language="javascript" type="text/javascript" 
 
-src="js_userinfo.aspx"></script> 
+src="js_userinfoqq.aspx"></script> 
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 
@@ -71,17 +71,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div class="mytaobao-bd">
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 推荐好友 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-
-
-weight:bold"><b>推荐送好礼</b></a></span></li>
-</div>
-
-<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 营销推广 </span>
 <button class="menu-close">-</button>
 </h3>
@@ -102,23 +91,6 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 淘宝站内营销 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="market/groupbuyadd.aspx" target="mainframe">创建活动</a></span></li>	
-		<li><span> <a
-		href="market/grouplist.aspx" target="mainframe">进行中活动</a></span></li>	
-		<li><span> <a
-		href="market/deletegrouplist.aspx" target="mainframe">已取消活动
-
-</a></span></li>		
-	</ul>
-</div>
-
-
-<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助中心 </span>
 <button class="menu-close">-</button>
 </h3>
@@ -130,9 +102,6 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 style="font-weight:bold">查看帮助教程</a></span></li>
 				</ul>	
 						
-					<!--<li><span> <a
-		href="../help/index.html" target="mainframe">VIP会员有什么好处
-	</a></span></li>-->
 				</ul>
 </div>
 
