--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -76,11 +76,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="market/addidea.aspx" target="mainframe">我要推广</a></span></li>
+		href="qqmarket/addidea.aspx" target="mainframe">我要推广</a></span></li>
 		<li ><span> <a
-		href="market/idealist.aspx" target="mainframe">推广管理
+		href="qqmarket/idealist.aspx" target="mainframe">推广管理
 	</a></span></li>				<li><span> <a
-		href="market/result.aspx" target="mainframe">投放结果分析
+		href="qqmarket/result.aspx" target="mainframe">投放结果分析
 	</a></span></li>				</ul>
 </div>
 
@@ -170,7 +170,7 @@ nekot=0ra2+cvmx+W35w==1284453111507">客户来源
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
                 <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
 
-name="mainframe" src="market/addidea.aspx" frameborder="0" scrolling="no"></iframe>
+name="mainframe" src="qqmarket/addidea.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
