--- a/top/index.html
+++ b/top/index.html
@@ -51,7 +51,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<a href="http://fuwu.taobao.com/serv/detail.htm?service_id=4545&fromtop=1" target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
+	<a href="http://fuwu.taobao.com/serv/detail.htm?service_id=4545&fromtop=1" 
+target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
     </tr>
 </table>
 
@@ -152,53 +153,6 @@ weight:bold" target="mainframe">我的售后问题</a></span></li>-->
 
 </div>
 
-
-<!--<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 客户转换 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://trade.taobao.com/trade/itemlist/list_sold_items.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">商品精准推荐</a></span></li>
-		<li ><span> <a
-		href="http://wuliu.taobao.com/user/order_list_new.htm?
-
-order_status_show=send&nekot=0ra2+cvmx+W35w==1284453111507">商品促销
-	</a></span></li>				<li><span> <a
-		href="http://wuliu.taobao.com/user/logis_tools.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">积分体系
-	</a></span></li>		<li><span> <a
-		href="http://wuliu.taobao.com/user/consign_setting.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户行为分析
-	</a></span></li>		</ul>
-</div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 客户关系维护 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://trade.taobao.com/trade/itemlist/list_sold_items.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户关怀</a></span></li>
-		<li ><span> <a
-		href="http://wuliu.taobao.com/user/order_list_new.htm?
-
-order_status_show=send&nekot=0ra2+cvmx+W35w==1284453111507">二次销售
-	</a></span></li>				<li><span> <a
-		href="http://wuliu.taobao.com/user/logis_tools.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户来源
-	</a></span></li>			</ul>
-</div>-->
-
-
 </div>
 <!--content-->
             </div>
@@ -234,6 +188,34 @@ name="mainframe" src="market/addidea.aspx" frameborder="0" scrolling="no"></ifra
 
 language="JavaScript"></script>
 </div>
+
+<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; 
+background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 
+2184px; z-index: 10002;"></div>
+<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 
+400px;  z-index: 10003;">
+    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:white">
+关闭窗口</a> 60秒后窗口自动关闭.. <br>
+    <a href='http://www.7fshop.com/top/review/tongji3.aspx' 
+target="_blank"><img src='http://www.7fshop.com/top/review/tongimg1.aspx' border=0 /></a>
+</div>
+
+<script>
+    function showArea() {
+        document.getElementById("divBackground").style.display = "block";
+        document.getElementById("divBackground").style.filter = "alpha(opacity=50)";
+        document.getElementById("ggArea").style.display = "block";
+
+        setTimeout('closeArea()', 60000);
+    }
+
+    function closeArea() {
+        document.getElementById("divBackground").style.display = "none";
+        document.getElementById("ggArea").style.display = "none";
+    }
+
+    setTimeout('showArea()', 3000);
+</script>
 
 </body>
 </html>
