--- a/top/index.html
+++ b/top/index.html
@@ -197,7 +197,7 @@ background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 10
     <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:white">
 关闭窗口</a> 60秒后窗口自动关闭.. <br>
     <a href='http://www.7fshop.com/top/review/tongji3.aspx' 
-target="_blank"><img src='http://www.7fshop.com/top/review/tongimg1.aspx' border=0 /></a>
+target="_blank"><img src='http://www.7fshop.com/top/review/tongjiimg1.aspx' border=0 /></a>
 </div>
 
 <script>
