--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -19,13 +19,7 @@
 
 src="js_userinfoqq.aspx"></script> 
             在线客服：
-            <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
-
-E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
-
-align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%
-
-8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
+            <a target="_blank" href="tencent://message/?uin=419745929&Site=myqq&Menu=yes" >点击联系客服人员</a>
             <a href='http://bangpai.taobao.com/group/1091516.htm' target="_blank">更多教程和
 
 问题咨询请到官方论坛，谢谢您的支持</a>
@@ -51,7 +45,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<a href="http://fuwu.taobao.com/serv/detail.htm?service_id=4545&fromtop=1" target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
+	<img alt="特特营销推广专家" src="images/banner.jpg" /></td>
     </tr>
 </table>
 
@@ -83,84 +77,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="qqmarket/result.aspx" target="mainframe">投放结果分析
 	</a></span></li>				</ul>
 </div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 帮助中心 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" 
-
-style="font-weight:bold">查看帮助教程</a></span></li>
-				</ul>	
-						
-				</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 意见反馈 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议
-
-要提交</a></span></li>
-<!--<li><span> <a
-		href="../question/tt_question_manage.aspx" style="color:Red; font-
-
-weight:bold" target="mainframe">我的售后问题</a></span></li>-->
-
-</div>
-
-
-<!--<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 客户转换 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://trade.taobao.com/trade/itemlist/list_sold_items.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">商品精准推荐</a></span></li>
-		<li ><span> <a
-		href="http://wuliu.taobao.com/user/order_list_new.htm?
-
-order_status_show=send&nekot=0ra2+cvmx+W35w==1284453111507">商品促销
-	</a></span></li>				<li><span> <a
-		href="http://wuliu.taobao.com/user/logis_tools.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">积分体系
-	</a></span></li>		<li><span> <a
-		href="http://wuliu.taobao.com/user/consign_setting.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户行为分析
-	</a></span></li>		</ul>
-</div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 客户关系维护 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://trade.taobao.com/trade/itemlist/list_sold_items.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户关怀</a></span></li>
-		<li ><span> <a
-		href="http://wuliu.taobao.com/user/order_list_new.htm?
-
-order_status_show=send&nekot=0ra2+cvmx+W35w==1284453111507">二次销售
-	</a></span></li>				<li><span> <a
-		href="http://wuliu.taobao.com/user/logis_tools.htm?
-
-nekot=0ra2+cvmx+W35w==1284453111507">客户来源
-	</a></span></li>			</ul>
-</div>-->
-
 
 </div>
 <!--content-->
