--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -20,9 +20,6 @@
 src="js_userinfoqq.aspx"></script> 
             在线客服：
             <a target="_blank" href="tencent://message/?uin=419745929&Site=myqq&Menu=yes" >点击联系客服人员</a>
-            <a href='http://bangpai.taobao.com/group/1091516.htm' target="_blank">更多教程和
-
-问题咨询请到官方论坛，谢谢您的支持</a>
         </p>
         <ul class="quick-menu">
             <li>
@@ -33,9 +30,6 @@ src="js_userinfoqq.aspx"></script>
 
 
 <!--公告信息-->
-<div id="system-announce" style="display:none;">特特营销推广专家免费试用中，欢迎各位卖家提出
-
-宝贵意见~ 》。《</div>
 
 <!--LOGO 和 广告信息-->
 <h1 id="logo1" style="height:100px; margin-top:0px; padding-top:5px;">
@@ -45,7 +39,7 @@ src="js_userinfoqq.aspx"></script>
         <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<img alt="特特营销推广专家" src="images/banner.jpg" /></td>
+	<img alt="特特营销推广专家" src="top/qqmarket/images/banner.gif" /></td>
     </tr>
 </table>
 
