--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -15,11 +15,9 @@
 <div id="header">
     <div id="site-nav" style="margin-bottom:5px;">
 	    <p class="login-info">
-            <script language="javascript" type="text/javascript" 
-
-src="js_userinfoqq.aspx"></script> 
+            <script language="javascript" type="text/javascript" src="js_userinfoqq.aspx"></script> 
             在线客服：
-            <a target="_blank" href="tencent://message/?uin=419745929&Site=myqq&Menu=yes" >点击联系客服人员</a>
+            <a target=blank href="http://wpa.qq.com/msgrd?V=1&Uin=419745929&Site=特特营销推广专家&Menu=yes"><img src=http://wpa.qq.com/pa?p=1:5400112:1 alt="点击这里给我发消息" hspace="10" border="0" align="absmiddle"></a> 
         </p>
         <ul class="quick-menu">
             <li>
