--- a/top/qqindex.html
+++ b/top/qqindex.html
@@ -37,7 +37,7 @@
         <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<img alt="特特营销推广专家" src="top/qqmarket/images/banner.gif" /></td>
+	<img alt="特特营销推广专家" src="qqmarket/images/banner.gif" /></td>
     </tr>
 </table>
 
