--- a/top/index.html
+++ b/top/index.html
@@ -144,9 +144,7 @@ style="font-weight:bold">查看帮助教程</a></span></li>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议
-
-要提交</a></span></li>
+		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议要提交</a></span></li>
 <!--<li><span> <a
 		href="../question/tt_question_manage.aspx" style="color:Red; font-
 
