--- a/top/index1.html
+++ b/top/index1.html
@@ -49,7 +49,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:40px;">
    <li class="currentBtn"><a href="javascript:void(0)" title="免费营销推广" rel="1">免费营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
-   <li><a href="javascript:void(0)" title="微博营销" rel="3">微博营销</a></li>
+   <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
 </ul>
 </div>
 
@@ -213,13 +213,59 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 <div class="mytaobao-bd">
 
+
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 微博营销 </span>
+<h3 class="mytaobao-bar"><span> 好评有礼 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="microblog/weiboindex.aspx" target="mainframe2">微博营销</a></span></li>
+		href="http://haoping.7fshop.com/top/review/setting.aspx" target="mainframe">基本设置</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/review/html.aspx" target="mainframe">活动展示</a></span></li>	
+    </ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 商品评价 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/reviewlist.aspx" target="mainframe">好评列表</a></span></li>	
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/kefulist.aspx" target="mainframe">待审核评价</a></span></li>		
+    </ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 短信提醒 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/msg.aspx" target="mainframe">短信提醒设置</a></span></li>	
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/msglist.aspx" target="mainframe">短信发送记录</a></span></li>		
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/msgbuy.aspx" target="mainframe">购买短信</a></span></li>	
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/msgaddlist.aspx" target="mainframe">短信充值记录</a></span></li>	
+    </ul>
+</div>
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/review/msgsend.aspx" target="mainframe">手动赠送</a></span></li>		
     </ul>
 </div>
 
@@ -229,9 +275,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
-
-name="mainframe2" src="microblog/weiboindex.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe2" src="http://haoping.7fshop.com/top/review/setting.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
