--- a/top/index1.html
+++ b/top/index1.html
@@ -212,9 +212,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/review/setting.aspx" target="mainframe">基本设置</a></span></li>
+		href="http://haoping.7fshop.com/top/review/setting.aspx" target="mainframe2">基本设置</a></span></li>
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/review/html.aspx" target="mainframe">活动展示</a></span></li>	
+		href="http://haoping.7fshop.com/top/review/html.aspx" target="mainframe2">活动展示</a></span></li>	
     </ul>
 </div>
 
@@ -224,9 +224,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/reviewlist.aspx" target="mainframe">好评列表</a></span></li>	
+		href="http://haoping.7fshop.com/top/review/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/kefulist.aspx" target="mainframe">待审核评价</a></span></li>		
+		href="http://haoping.7fshop.com/top/review/kefulist.aspx" target="mainframe2">待审核评价</a></span></li>		
     </ul>
 </div>
 
@@ -236,13 +236,13 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msg.aspx" target="mainframe">短信提醒设置</a></span></li>	
+		href="http://haoping.7fshop.com/top/review/msg.aspx" target="mainframe2">短信提醒设置</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msglist.aspx" target="mainframe">短信发送记录</a></span></li>		
+		href="http://haoping.7fshop.com/top/review/msglist.aspx" target="mainframe2">短信发送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgbuy.aspx" target="mainframe">购买短信</a></span></li>	
+		href="http://haoping.7fshop.com/top/review/msgbuy.aspx" target="mainframe2">购买短信</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgaddlist.aspx" target="mainframe">短信充值记录</a></span></li>	
+		href="http://haoping.7fshop.com/top/review/msgaddlist.aspx" target="mainframe2">短信充值记录</a></span></li>	
     </ul>
 </div>
 
@@ -253,11 +253,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
+		href="http://haoping.7fshop.com/top/review/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
+		href="http://haoping.7fshop.com/top/review/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgsend.aspx" target="mainframe">手动赠送</a></span></li>		
+		href="http://haoping.7fshop.com/top/review/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
     </ul>
 </div>
 
