--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -120,7 +120,7 @@
 		<li ><span> <a
 		href="review/qubie.html" target="mainframe" style="color:Red; font-weight:bold">版本区别</a></span></li>		
 		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">查看详细帮助教程</a></span></li>
+		href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank"">查看详细帮助教程</a></span></li>
 </div>
 
 
@@ -157,6 +157,70 @@
 <div style="display:none">
     <script src="http://s15.cnzz.com/stat.php?id=2663330&web_id=2663330&show=pic" language="JavaScript"></script>
 </div>
+
+
+
+
+
+<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; 
+
+background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 
+
+2184px; z-index: 10002;"></div>
+<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 
+
+400px;  z-index: 10003;">
+    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:white">关闭窗口</a> 3秒后窗口自动关闭.. <br>
+    请您填写下手机号码，这样如果您的优惠券快到期或者送完的时候我们会有消息提醒您及时进行调整...<br />
+    <input type="text" name="phone" />  <input type="button" onclick="savephone()" value="提交" />
+</div>
+
+
+<script>
+    var xmlHttp;
+    var itemsStr;
+    var itemsStrTxt;
+    function createxmlHttpRequest() {
+        if (window.ActiveXObject)
+            xmlHttp = new ActiveXObject("Microsoft.XMLHTTP");
+        else if (window.XMLHttpRequest)
+            xmlHttp = new XMLHttpRequest();
+    }
+    function showArea() {
+        document.getElementById("divBackground").style.display = "block";
+        document.getElementById("divBackground").style.filter = "alpha(opacity=50)";
+        document.getElementById("ggArea").style.display = "block";
+
+        setTimeout('closeArea()', 3000);
+    }
+
+    function closeArea() {
+        document.getElementById("divBackground").style.display = "none";
+        document.getElementById("ggArea").style.display = "none";
+    }
+
+    function savephone() {
+        var phone = document.getElementById("phone").value;
+        var url = "review/setting.aspx?act=savephone&phone=" + phone;
+
+        createxmlHttpRequest();
+        var queryString = url + "&t=" + new Date().getTime();
+        xmlHttp.open("GET", queryString);
+        xmlHttp.onreadystatechange = handleStateChangeCat;
+        xmlHttp.send(null);
+
+        closeArea();
+    }
+
+    function handleStateChangeCat() {
+        if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
+            alert('手机号码保存成功，谢谢您的合作！');
+        }
+    }
+</script>
+
+<script language="javascript" src="review/js_isshow.aspx" type="text/javascript"></script>
+
 
 </body>
 </html>
