--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -207,6 +207,14 @@ background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 10
 
     function savephone() {
         var phone = document.getElementById("phone").value;
+
+        var reg = /^0{0,1}(13[0-9]|14[0-9]|15[0-9]|18[0-9])[0-9]{8}$/;
+        if (!reg.test(phone)) {
+            alert('请输入正确的手机号码，谢谢您的合作！');
+            document.getElementById('phone').focus();
+            return false;
+        }
+
         var url = "http://haoping.7fshop.com/top/review/setting.aspx?act=savephone&phone=" + phone;
 
         createxmlHttpRequest();
