--- a/top/index1.html
+++ b/top/index1.html
@@ -47,9 +47,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <img alt="特特营销推广专家" src="images/logo.jpg" width="150" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:40px;">
-   <li class="currentBtn"><a href="javascript:void(0)" title="免费营销推广" rel="1">免费营销推广</a></li>
+   <li class="currentBtn"><a href="javascript:void(0)" title="免费营销推广" rel="1">营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
+   <li><a href="javascript:void(0)" title="手机客户端" rel="4">手机客户端</a></li>
+   <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区" rel="5">社区</a></li>
 </ul>
 </div>
 
