--- a/top/index1.html
+++ b/top/index1.html
@@ -47,7 +47,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <img alt="特特营销推广专家" src="images/logo.jpg" width="150" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:40px;">
-   <li class="currentBtn"><a href="javascript:void(0)" title="免费营销推广" rel="1">营销推广</a></li>
+   <li class="currentBtn"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="手机客户端" rel="4">手机客户端</a></li>
@@ -58,7 +58,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
-            <div id="mytaobao-menu" class="box-diamond">
+            <div id="Div1" class="box-diamond">
 <!--content-->
 
 <div class="mytaobao-bd">
