--- a/top/index1.html
+++ b/top/index1.html
@@ -58,11 +58,10 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
-            <div id="Div1" class="box-diamond">
+            <div id="mytaobao-menu" class="box-diamond">
 <!--content-->
 
 <div class="mytaobao-bd">
-
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 推荐好友 </span>
 <button class="menu-close">-</button>
