--- a/top/index.html
+++ b/top/index.html
@@ -51,9 +51,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<a href="http://fuwu.taobao.com/serv/detail.htm?service_id=4545&fromtop=1" 
-
-target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
+	<a href="http://fuwu.taobao.com/serv/detail.htm?service_id=4545&fromtop=1" target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
     </tr>
 </table>
 
@@ -73,14 +71,23 @@ target="_blank"><img alt="好评有礼" src="images/bannernew.jpg" /></a></td>
 <div class="mytaobao-bd">
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 推荐好友 </span>
+<h3 class="mytaobao-bar"><span> 新年特惠 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+		<!--<li><span> <a
+		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-
+
+weight:bold"><b>移动客户端</b></a></span></li>-->
 		<li><span> <a
 		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-
 
 weight:bold"><b>推荐送好礼</b></a></span></li>
+
+<li><span> <a href="market/weiboindex.aspx" target="mainframe" ><b style="color:red; font-weight:bold;">微博营销</b>
+	</a></span></li>
+<!--<li><span> <a href="market/weibo.aspx" target="_blank" ><b style="color:red; font-weight:bold;">自动加粉丝</b>
+	</a></span></li>-->
 </div>
 
 <div class="menu-box">
@@ -100,7 +107,7 @@ target="_blank"><b style="color:red; font-weight:bold;">团购营销</b>
 	</a></span></li>		<li><span> <a
 		href="http://seller.taobao.com/fuwu/service.htm?service_id=4545&fromleft=1" 
 target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
-	</a></span></li>		</ul>
+	</a></span></li>					</ul>
 </div>
 
 <div class="menu-box">
@@ -130,6 +137,12 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" 
 
 style="font-weight:bold">查看帮助教程</a></span></li>
+
+		<li><span> <a
+		href="market/groupbuydirect.aspx" target="mainframe">清除团购代码
+
+</a></span></li>	
+
 				</ul>	
 						
 					<!--<li><span> <a
@@ -144,7 +157,9 @@ style="font-weight:bold">查看帮助教程</a></span></li>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议要提交</a></span></li>
+		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议
+
+要提交</a></span></li>
 <!--<li><span> <a
 		href="../question/tt_question_manage.aspx" style="color:Red; font-
 
@@ -188,20 +203,19 @@ name="mainframe" src="market/addidea.aspx" frameborder="0" scrolling="no"></ifra
 language="JavaScript"></script>
 </div>
 
-<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; 
+<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 2184px; z-index: 10002;"></div>
+<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 400px;  z-index: 10003; background-color:white; padding:5px">
+    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
+<span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
+<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>
+<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-6:1' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
+<span style="font-size:16px;">具体情况请联系客服 <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 
-background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 
+E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
 
-2184px; z-index: 10002;"></div>
-<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 
+align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%
 
-400px;  z-index: 10003;">
-    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:white">
-
-关闭窗口</a> 60秒后窗口自动关闭.. <br>
-    <a href='http://www.7fshop.com/top/review/tongji3.aspx' 
-
-target="_blank"><img src='http://www.7fshop.com/top/review/tongjiimg1.aspx' border=0 /></a>
+8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="联系客服" /></a></span>
 </div>
 
 <script>
@@ -210,7 +224,7 @@ target="_blank"><img src='http://www.7fshop.com/top/review/tongjiimg1.aspx' bord
         document.getElementById("divBackground").style.filter = "alpha(opacity=50)";
         document.getElementById("ggArea").style.display = "block";
 
-        setTimeout('closeArea()', 60000);
+        setTimeout('closeArea()', 20000);
     }
 
     function closeArea() {
