--- a/top/index1.html
+++ b/top/index1.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>特特营销推广专家</title>
+    <title>特特软件-淘宝卖家一站式服务软件解决方案</title>
     <link href="css/css1.css" rel="stylesheet" />
     <link href="css/member.css" rel="stylesheet" />
     <link href="market/images/tab.css" rel="stylesheet" />
@@ -21,19 +21,15 @@
 src="js_userinfo.aspx"></script> 
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
-
 E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
-
 align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%
-
 8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
             <a href='http://bangpai.taobao.com/group/1091516.htm' target="_blank">更多教程和
-
 问题咨询请到官方论坛，谢谢您的支持</a>
         </p>
         <ul class="quick-menu">
             <li>
-                <a href="../help/index.html#" target="mainframe">帮助中心</a>
+                <a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank">帮助中心</a>
             </li>       
         </ul>
     </div>
@@ -44,14 +40,14 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="tabCot_product" class="tab">
 <div class="tabContainer">
 <div style="float:left; width:161px;">
-    <img alt="特特营销推广专家" src="images/logo.jpg" width="150" />
+    <img alt="特特营销推广专家" src="images/logo.jpg" width="150" height="40" />
 </div>
-<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:40px;">
+<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
    <li class="currentBtn"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="手机客户端" rel="4">手机客户端</a></li>
-   <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区" rel="5">社区</a></li>
+   <li><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
+   <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
 
@@ -63,7 +59,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 
 <div class="mytaobao-bd">
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 推荐好友 </span>
+<h3 class="mytaobao-bar"><span> 新年特惠 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
@@ -71,6 +67,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 		href="market/tuijianlist.aspx" target="mainframe" style="color:Red; font-
 
 weight:bold"><b>推荐送好礼</b></a></span></li>
+
+<li><span> <a href="market/weiboindex.aspx" target="mainframe" ><b style="color:red; font-weight:bold;">微博营销</b>
+	</a></span></li>
 </div>
 
 <div class="menu-box">
@@ -108,40 +107,6 @@ target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
 </a></span></li>		
 	</ul>
 </div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 帮助中心 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" 
-
-style="font-weight:bold">查看帮助教程</a></span></li>
-				</ul>	
-						
-					<!--<li><span> <a
-		href="../help/index.html" target="mainframe">VIP会员有什么好处
-	</a></span></li>-->
-				</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 意见反馈 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank"">我有建议要提交</a></span></li>
-<!--<li><span> <a
-		href="../question/tt_question_manage.aspx" style="color:Red; font-
-
-weight:bold" target="mainframe">我的售后问题</a></span></li>-->
-
-</div>
-
 </div>
 <!--content-->
             </div>
@@ -282,7 +247,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 <div id="footer">
 <div id="copyright">
-    Copyright &copy; 2010-2011 7fshop.com 版权所有 <br />
+    Copyright &copy; 2010-2012 7fshop.com 版权所有 <br />
     <a href='http://www.miibeian.gov.cn/' target="_blank">沪ICP备10023864号-1</a>
 </div>
 <div class="copyright">
