--- a/top/index1.html
+++ b/top/index1.html
@@ -83,13 +83,13 @@ weight:bold"><b>推荐送好礼</b></a></span></li>
 		href="market/idealist.aspx" target="mainframe">推广管理
 	</a></span></li>				<li><span> <a
 		href="market/result.aspx" target="mainframe">投放结果分析
-	</a></span></li>		<li><span> <a
+	</a></span></li>		<!--<li><span> <a
 		href="http://seller.taobao.com/fuwu/service.htm?service_id=11807&fromleft=1" 
 target="_blank"><b style="color:red; font-weight:bold;">团购营销</b>
 	</a></span></li>		<li><span> <a
 		href="http://seller.taobao.com/fuwu/service.htm?service_id=4545&fromleft=1" 
 target="_blank"><b style="color:red; font-weight:bold;">好评有礼</b>
-	</a></span></li>		</ul>
+	</a></span></li>-->		</ul>
 </div>
 
 <div class="menu-box">
@@ -178,9 +178,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/review/setting.aspx" target="mainframe2">基本设置</a></span></li>
+		href="http://haoping.7fshop.com/top/reviewnew/setting.aspx" target="mainframe2">基本设置</a></span></li>
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/review/html.aspx" target="mainframe2">活动展示</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">活动展示</a></span></li>	
     </ul>
 </div>
 
@@ -190,9 +190,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/kefulist.aspx" target="mainframe2">待审核评价</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/kefulist.aspx" target="mainframe2">待审核评价</a></span></li>		
     </ul>
 </div>
 
@@ -202,13 +202,13 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msg.aspx" target="mainframe2">短信提醒设置</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/msg.aspx" target="mainframe2">短信提醒设置</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msglist.aspx" target="mainframe2">短信发送记录</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/msglist.aspx" target="mainframe2">短信发送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgbuy.aspx" target="mainframe2">购买短信</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/msgbuy.aspx" target="mainframe2">购买短信</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgaddlist.aspx" target="mainframe2">短信充值记录</a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/msgaddlist.aspx" target="mainframe2">短信充值记录</a></span></li>	
     </ul>
 </div>
 
@@ -219,11 +219,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/review/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
     </ul>
 </div>
 
@@ -233,7 +233,48 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe2" src="http://haoping.7fshop.com/top/review/setting.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe2" src="http://haoping.7fshop.com/top/reviewnew/setting.aspx" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+</div>
+
+
+<div id="tabCot_product_4" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+<!--content-->
+
+<div class="mytaobao-bd">
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 移动客户端 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">下载二维码</a></span></li>
+		<li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">店铺数据更新</a></span></li>
+		<li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">广告设置</a></span></li>	
+		<li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">宝贝分类设置</a></span></li>
+		<li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">客户管理</a></span></li>
+        <li><span> <a
+		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">移动消息营销</a></span></li>		
+    </ul>
+</div>
+
+</div>
+<!--content-->
+            </div>
+        </div>
+        
+        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe3" src="http://www.7fshop.com/top/market/mshop.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
@@ -281,7 +322,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
             o.id = css[0];
             var item = o.getElementsByTagName(css[1]);
             var j = 1;
-            for (var i = 0; i < item.length; i++) {
+            for (var i = 0; i < item.length-1; i++) {
                 if (item[i].className.indexOf(css[2]) >= 0 || item[i].className.indexOf(css[3]) >= 0) {
                     if (item[i].className == css[2]) o['cur'] = item[i];
                     item[i].callBack = cb || function () { };
@@ -341,6 +382,37 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 language="JavaScript"></script>
 </div>
+<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 2184px; z-index: 10002;"></div>
+<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 400px;  z-index: 10003; background-color:white; padding:5px">
+    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
+<span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
+<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>
+<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-6:1' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
+<span style="font-size:16px;">具体情况请联系客服 <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
+
+E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
+
+align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%
+
+8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="联系客服" /></a></span>
+</div>
+
+<script>
+    function showArea() {
+        document.getElementById("divBackground").style.display = "block";
+        document.getElementById("divBackground").style.filter = "alpha(opacity=50)";
+        document.getElementById("ggArea").style.display = "block";
+
+        setTimeout('closeArea()', 20000);
+    }
+
+    function closeArea() {
+        document.getElementById("divBackground").style.display = "none";
+        document.getElementById("ggArea").style.display = "none";
+    }
+
+    setTimeout('showArea()', 3000);
+</script>
 
 </body>
 </html>
