--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -22,6 +22,24 @@
             </li>       
         </ul>
     </div>
+
+
+<!--公告信息-->
+<!--LOGO 和 广告信息-->
+<h1 id="logo" style="height:100px; margin-top:0px; padding-top:5px;">
+
+<table cellpadding=0 cellspacing=0 width="100%">
+    <tr>
+        <td><img alt="特特CRM_客户关系营销" src="images/logo.jpg" width="192" />
+	</td>
+        <td style="padding-left:20px;">
+	<img alt="特特CRM_客户关系营销" src="images/banner.jpg" /></td>
+    </tr>
+</table>
+
+	
+</h1>
+
 </div>
 
 
@@ -56,6 +74,7 @@
     </ul>
 </div>
 
+
 </div>
 
 </div>
@@ -64,7 +83,7 @@
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1060px;"> 
-                <iframe style="overflow:scroll; width: 100%; height:1060px; padding:0px;" name="mainframe" src="crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1060px; padding:0px;" name="mainframe" src="review/setting.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
@@ -74,7 +93,7 @@
 
 <div id="footer">
 <div id="copyright">
-    Copyright &copy; 2010-2012 tetesoft.com 版权所有 <br />
+    Copyright &copy; 2010-2011 tetesoft.com 版权所有 <br />
     <a href='http://www.miibeian.gov.cn/' target="_blank">沪ICP备10023864号-1</a>
 </div>
 <div class="copyright">
