--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -33,7 +33,7 @@
         <td><img alt="特特CRM_客户关系营销" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<img alt="特特CRM_客户关系营销" src="images/banner.jpg" /></td>
+	<img alt="特特CRM_客户关系营销" src="images/banner.gif" /></td>
     </tr>
 </table>
 
@@ -83,7 +83,7 @@
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1060px;"> 
-                <iframe style="overflow:scroll; width: 100%; height:1060px; padding:0px;" name="mainframe" src="review/setting.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1060px; padding:0px;" name="mainframe" src="crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
