--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -60,6 +60,8 @@
 <ul class="group">
 		<li><span> <a
 		href="crm/customlist.aspx" target="mainframe">客户列表</a></span></li>
+		<li><span> <a
+		href="crm/initcustom.aspx" target="mainframe">导入历史数据</a></span></li>
     </ul>
 </div>
 
