--- a/top/DataAnalysis/DataAnalysis.Web/index.htm
+++ b/top/DataAnalysis/DataAnalysis.Web/index.htm
@@ -72,11 +72,10 @@
 
 </head>
 <body>
-
     <script type="text/javascript" src="js/highcharts.js"></script>
 
     <script type="text/javascript" src="js/modules/exporting.js"></script>
-
+    <img src="GetData.ashx" />
     <div id="container" style="width: 800px; height: 400px; margin: 0 auto">
     </div>
 </body>
