--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -65,6 +65,21 @@
     </ul>
 </div>
 
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 按购买次数区别 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="crm/customlist.aspx?count=1" target="mainframe">购买过一次的会员</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=2" target="mainframe">购买过多次的会员</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=0" target="mainframe">未成功购买的会员</a></span></li>
+    </ul>
+</div>
+
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
