--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -81,6 +81,24 @@
 </div>
 
 <div class="menu-box">
+<h3 class="mytaobao-bar"><span> 按用户组区别 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="crm/customlist.aspx?count=a" target="mainframe">未购买</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=b" target="mainframe">普通会员</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=c" target="mainframe">高级会员</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=d" target="mainframe">VIP会员</a></span></li>
+		<li><span> <a
+		href="crm/customlist.aspx?count=e" target="mainframe">至尊VIP会员</a></span></li>
+    </ul>
+</div>
+
+<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
 </h3>
